<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PreR</string>
    <string name="action_settings">Settings</string>
    <string name="home_search_button_text">Search for a Procedure</string>
    <string name="home_camera_button_text">Upload a Bill</string>
    <string name="help_button_description">Help button to provide tips for taking a picture of a bill.</string>
    <string name="title_capture_bill">Capture Bill</string>
    <string name="review_bill_image">View to display bill image.</string>
    <string name="title_review_bill">Preview</string>
    <string name="search_edittext_hint">Procedure Name / CPT Code</string>
    <string name="title_activity_search">Search Procedures</string>
    <string name="zipcode_edittext_hint">Near: Zip Code, City, ...</string>
    <string name="search_button_text">Go</string>

    <string-array name="procedure_list">
        <item>Ankle X-Ray</item>
        <item>Ankle X-Ray</item>
        <item>Ankle Brace</item>
        <item>Ankle Cast</item>
        <item>Ankle Surgery</item>
        <item>Ankle Surgery</item>
        <item>Ankle Splint</item>
        <item>Wrist X-Ray</item>
        <item>Wrist Brace</item>
        <item>Wrist Brace</item>
        <item>Wrist Cast</item>
        <item>Wrist Cast</item>
        <item>Wrist Surgery</item>
        <item>Wrist Splint</item>
        <item>Shoulder X-Ray</item>
        <item>Shoulder X-Ray</item>
        <item>Shoulder Brace</item>
        <item>Shoulder Cast</item>
        <item>Shoulder Surgery</item>
        <item>Shoulder Surgery</item>
        <item>Ankle X-Ray</item>
    </string-array>
    <string-array name="zipcode_list">
        <item>93405</item>
        <item>93401</item>
        <item>93405</item>
        <item>93405</item>
        <item>93405</item>
        <item>93401</item>
        <item>93405</item>
        <item>93405</item>
        <item>93405</item>
        <item>93401</item>
        <item>93405</item>
        <item>93401</item>
        <item>93405</item>
        <item>93405</item>
        <item>93405</item>
        <item>93401</item>
        <item>93405</item>
        <item>93405</item>
        <item>93405</item>
        <item>93401</item>
        <item>94539</item>
    </string-array>

    <string name="incorrect_zip">Please enter a valid zip code</string>
    <string name="no_results">No Results Found</string>
    <string name="capture_button_text">Capture</string>
    <string name="splash_logo_description">The PreR brand logo with application icon and slogan.</string>
    <string name="title_activity_procedure_results_list">Results</string>
    <string name="sort_price">Sort by price</string>
    <string name="sort_distance">Sort by distance</string>
    <string name="title_activity_procedure_information">Procedure Information</string>
    <string name="hospital_info">\n123 Fake St.\nSan Luis Obispo</string>
    <string name="upload_text">Upload</string>
    <string name="retake_text">Retake</string>
    <string name="upload_success_message">Your bill has been successfully uploaded.</string>
    <string name="thank_you_message">Thank you for making health care healthier!</string>
    <string name="gohome_button">Home</string>
    <string name="upload_another_button">Upload Another Page</string>
    <string name="title_uploaded_bill">Upload Status</string>
    <string name="capture_button_description">Button for taking a picture.</string>
    <string name="submenu_upload_text">Upload to PreR</string>
    <string name="title_activity_first_use">FirstUseActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="welcome">Welcome to PreR!\nThank you for helping make health care healthier!</string>
    <string name="search_tut">PreR offers features to search and add medical prices around you.\nHere\'s how you would search for prices:\n\nFirst, select "Search for a Procedure"</string>
    <string name="search_tut2">Next, enter your location in the address text field. If you are using location services, you can leave that field blank to use your default location.\nThen, enter a query in the procedure search field. Results should automatically be populated in a dynamic list you can choose from.</string>
   	<string name="search_tut3">After selecting a procedure from the search result, you can view its information:</string>
    <string name="start_searching">Start searching procedures now!</string>
    <string name="intro_btn_text">Next</string>
    <string name="intro_final_btn_text">Let\'s get started!</string>
    <string name="help_checkbox_text">Don\'t show this on camera start</string>

</resources>