<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/upload_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:layout_marginTop="75dp"
        android:text="@string/upload_success_message"
        android:textSize="20sp"
        android:gravity="center" />

    <TextView
        android:id="@+id/thank_you_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp"
        android:text="@string/thank_you_message"
        android:textSize="20sp"
        android:gravity="center" />
    
    <LinearLayout 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="25dp"
        android:layout_gravity="center" >
        
        <Button 
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/gohome_button"
            android:onClick="goHomeClick" />
        
        <Button 
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/upload_another_button"
            android:onClick="uploadAnotherClick" />
        
    </LinearLayout>

</LinearLayout>
